src/test/resources/semantic_errors/printString_with_int.notc
void main() {
    int i = 4322;
    printString(i);
}
